--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,6 @@ requests-oauthlib==1.3.1 # OAuth integration
 six==1.16.0              # Python 2/3 compatibility
 tqdm==4.66.1             # Progress bar
 websockets==11.0.3       # WebSocket support
+
+
+#new requirements
