--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,11 +2,13 @@ trigger:
   - main
 
 pool:
-  name: 'SelfHostedBackend'  # Use your self-hosted pool name here
+  name: SelfHostedBackend  # Use your self-hosted agent pool or Hosted Ubuntu if you have permission
 
 variables:
+  BACKEND_IP: '20.115.90.142'
+  SSH_USER: 'azureuser'
+  SSH_KEY_PATH: '/home/azureuser/.ssh/backend_key.pem'  # adjust if needed
   APP_DIR: '/chatapp'
-  SERVICE_NAME: 'chatapp.service'
 
 stages:
 - stage: Deploy
@@ -15,41 +17,31 @@ stages:
   - job: PushAndDeploy
     displayName: 'Copy, Install & Migrate'
     steps:
-
-    # 1) Copy code to the VM
-    - task: CmdLine@2
+    - script: |
+        echo "Copying application files to backend..."
+        rsync -avz -e "ssh -i ${SSH_KEY_PATH} -o StrictHostKeyChecking=no" \
+          $(Build.SourcesDirectory)/ ${SSH_USER}@${BACKEND_IP}:${APP_DIR}/
       displayName: 'Copy application files to backend'
-      inputs:
-        script: |
-          echo "Copying application files to backend..."
-          rsync -av --delete "$(Build.SourcesDirectory)/" azureuser@your-backend-ip:${APP_DIR}/
 
-    # 2) Install Python deps
-    - task: SSH@0
-      displayName: 'Install Python dependencies'
-      inputs:
-        sshEndpoint: 'backend_vm_ssh'  # your SSH service connection
-        runOptions: 'commands'
-        commands: |
+    - script: |
+        echo "Installing Python dependencies..."
+        ssh -i ${SSH_KEY_PATH} -o StrictHostKeyChecking=no ${SSH_USER}@${BACKEND_IP} << EOF
           source ${APP_DIR}/venv/bin/activate
           pip install -r ${APP_DIR}/requirements.txt
+        EOF
+      displayName: 'Install Python dependencies'
 
-    # 3) Run Django makemigrations & migrate
-    - task: SSH@0
-      displayName: 'Run Django migrations'
-      inputs:
-        sshEndpoint: 'backend_vm_ssh'
-        runOptions: 'commands'
-        commands: |
+    - script: |
+        echo "Running Django migrations..."
+        ssh -i ${SSH_KEY_PATH} -o StrictHostKeyChecking=no ${SSH_USER}@${BACKEND_IP} << EOF
           source ${APP_DIR}/venv/bin/activate
           cd ${APP_DIR}/fundoo
           python3 manage.py makemigrations
           python3 manage.py migrate
+        EOF
+      displayName: 'Run Django makemigrations & migrate'
 
-    # 4) Restart systemd service
-    - task: SSH@0
+    - script: |
+        echo "Restarting chatapp service..."
+        ssh -i ${SSH_KEY_PATH} -o StrictHostKeyChecking=no ${SSH_USER}@${BACKEND_IP} sudo systemctl restart chatapp.service
       displayName: 'Restart chatapp.service'
-      inputs:
-        sshEndpoint: 'backend_vm_ssh'
-        runOptions: 'commands'
-        commands: sudo systemctl restart ${SERVICE_NAME}
