--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,13 +1,13 @@
 trigger:
-  - main
+- main
 
 pool:
-  name: SelfHostedBackend  # Use your self-hosted agent pool or Hosted Ubuntu if you have permission
+  name: SelfHostedBackend   # Your self-hosted agent pool name
 
 variables:
-  BACKEND_IP: '20.115.90.142'
-  SSH_USER: 'azureuser'
-  SSH_KEY_PATH: '/home/azureuser/.ssh/backend_key.pem'  # adjust if needed
+  VM_IP: '20.115.90.142'
+  VM_USER: 'azureuser'
+  SSH_KEY_PATH: '/home/azureuser/.ssh/backend_key.pem'
   APP_DIR: '/chatapp'
 
 stages:
@@ -17,31 +17,27 @@ stages:
   - job: PushAndDeploy
     displayName: 'Copy, Install & Migrate'
     steps:
+
+    # 1) Copy code to the VM using rsync over SSH with private key
     - script: |
         echo "Copying application files to backend..."
-        rsync -avz -e "ssh -i ${SSH_KEY_PATH} -o StrictHostKeyChecking=no" \
-          $(Build.SourcesDirectory)/ ${SSH_USER}@${BACKEND_IP}:${APP_DIR}/
+        rsync -avz -e "ssh -i $(SSH_KEY_PATH) -o StrictHostKeyChecking=no" --delete $(Build.SourcesDirectory)/ $(VM_USER)@$(VM_IP):$(APP_DIR)
       displayName: 'Copy application files to backend'
 
+    # 2) Install Python dependencies
     - script: |
         echo "Installing Python dependencies..."
-        ssh -i ${SSH_KEY_PATH} -o StrictHostKeyChecking=no ${SSH_USER}@${BACKEND_IP} << EOF
-          source ${APP_DIR}/venv/bin/activate
-          pip install -r ${APP_DIR}/requirements.txt
-        EOF
+        ssh -i $(SSH_KEY_PATH) -o StrictHostKeyChecking=no $(VM_USER)@$(VM_IP) "source $(APP_DIR)/venv/bin/activate && pip install -r $(APP_DIR)/requirements.txt"
       displayName: 'Install Python dependencies'
 
+    # 3) Run Django makemigrations & migrate
     - script: |
         echo "Running Django migrations..."
-        ssh -i ${SSH_KEY_PATH} -o StrictHostKeyChecking=no ${SSH_USER}@${BACKEND_IP} << EOF
-          source ${APP_DIR}/venv/bin/activate
-          cd ${APP_DIR}/fundoo
-          python3 manage.py makemigrations
-          python3 manage.py migrate
-        EOF
-      displayName: 'Run Django makemigrations & migrate'
+        ssh -i $(SSH_KEY_PATH) -o StrictHostKeyChecking=no $(VM_USER)@$(VM_IP) "source $(APP_DIR)/venv/bin/activate && cd $(APP_DIR)/fundoo && python3 manage.py makemigrations && python3 manage.py migrate"
+      displayName: 'Run Django migrations'
 
+    # 4) Restart the service chatappdaemon.service
     - script: |
-        echo "Restarting chatapp service..."
-        ssh -i ${SSH_KEY_PATH} -o StrictHostKeyChecking=no ${SSH_USER}@${BACKEND_IP} sudo systemctl restart chatapp.service
-      displayName: 'Restart chatapp.service'
+        echo "Restarting chatappdaemon.service..."
+        ssh -i $(SSH_KEY_PATH) -o StrictHostKeyChecking=no $(VM_USER)@$(VM_IP) "sudo systemctl restart chatappdaemon.service"
+      displayName: 'Restart chatappdaemon.service'
