--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,11 +2,11 @@ trigger:
 - main
 
 pool:
-  name: SelfHostedBackend   # Your self-hosted agent pool name
+  name: SelfHostedBackend  # your self-hosted agent pool name
 
 variables:
-  VM_IP: '20.115.90.142'
   VM_USER: 'azureuser'
+  VM_IP: '20.115.90.142'
   SSH_KEY_PATH: '/home/azureuser/.ssh/backend_key.pem'
   APP_DIR: '/chatapp'
 
@@ -18,25 +18,30 @@ stages:
     displayName: 'Copy, Install & Migrate'
     steps:
 
-    # 1) Copy code to the VM using rsync over SSH with private key
     - script: |
         echo "Copying application files to backend..."
-        rsync -avz -e "ssh -i $(SSH_KEY_PATH) -o StrictHostKeyChecking=no" --delete $(Build.SourcesDirectory)/ $(VM_USER)@$(VM_IP):$(APP_DIR)
+        rsync -avz -e "ssh -i $(SSH_KEY_PATH) -o StrictHostKeyChecking=no" $(Build.SourcesDirectory)/ $(VM_USER)@$(VM_IP):$(APP_DIR)
       displayName: 'Copy application files to backend'
 
-    # 2) Install Python dependencies
     - script: |
         echo "Installing Python dependencies..."
-        ssh -i $(SSH_KEY_PATH) -o StrictHostKeyChecking=no $(VM_USER)@$(VM_IP) "source $(APP_DIR)/venv/bin/activate && pip install -r $(APP_DIR)/requirements.txt"
+        ssh -i $(SSH_KEY_PATH) -o StrictHostKeyChecking=no $(VM_USER)@$(VM_IP) "
+          cd $(APP_DIR) && \
+          source venv/bin/activate && \
+          pip install -r requirements.txt
+        "
       displayName: 'Install Python dependencies'
 
-    # 3) Run Django makemigrations & migrate
     - script: |
-        echo "Running Django migrations..."
-        ssh -i $(SSH_KEY_PATH) -o StrictHostKeyChecking=no $(VM_USER)@$(VM_IP) "source $(APP_DIR)/venv/bin/activate && cd $(APP_DIR)/fundoo && python3 manage.py makemigrations && python3 manage.py migrate"
-      displayName: 'Run Django migrations'
+        echo "Running Django makemigrations & migrate..."
+        ssh -i $(SSH_KEY_PATH) -o StrictHostKeyChecking=no $(VM_USER)@$(VM_IP) "
+          cd $(APP_DIR)/fundoo && \
+          source ../venv/bin/activate && \
+          python3 manage.py makemigrations && \
+          python3 manage.py migrate
+        "
+      displayName: 'Run Django makemigrations & migrate'
 
-    # 4) Restart the service chatappdaemon.service
     - script: |
         echo "Restarting chatappdaemon.service..."
         ssh -i $(SSH_KEY_PATH) -o StrictHostKeyChecking=no $(VM_USER)@$(VM_IP) "sudo systemctl restart chatappdaemon.service"
