--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,6 @@ trigger:
 pool:
   name: SelfHostedBackend  # your self-hosted agent pool name
 
-
 variables:
   SSH_KEY_PATH: '/home/azureuser/.ssh/backend_key.pem'  # Path to your private SSH key on build agent
   BACKEND_HOST: '20.115.90.142'                         # Your VM public IP
@@ -16,7 +15,7 @@ stages:
   jobs:
   - job: DeployJob
     pool:
-      vmImage: 'ubuntu-latest'
+      name: SelfHostedBackend  # Self-hosted agent pool
 
     steps:
 
