Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ stages:
           cd $(APP_PATH)
           source venv/bin/activate
           pip install -r requirements.txt
-          pip install python-dotenv
+          pip install python-dotenv mysqlclient
         EOF
       displayName: 'Install Python dependencies'
 
