--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,21 +2,18 @@ trigger:
 - main
 
 pool:
-  name: SelfHostedBackend  # your self-hosted agent pool name
+  name: SelfHostedBackend  # Use your self-hosted agent pool
 
 variables:
-  SSH_KEY_PATH: '/home/azureuser/.ssh/backend_key.pem'  # Path to your private SSH key on build agent
-  BACKEND_HOST: '20.115.90.142'                         # Your VM public IP
-  APP_PATH: '/chatapp'                                  # Backend app path on VM
-  SERVICE_NAME: 'chatappdaemon.service'                 # Systemd service name
+  SSH_KEY_PATH: '/home/azureuser/.ssh/backend_key.pem'
+  BACKEND_HOST: '20.115.90.142'
+  APP_PATH: '/chatapp'
+  SERVICE_NAME: 'chatappdaemon.service'
 
 stages:
 - stage: Deploy
   jobs:
   - job: DeployJob
-    pool:
-      name: SelfHostedBackend  # Self-hosted agent pool
-
     steps:
 
     - checkout: self
@@ -28,14 +25,20 @@ stages:
       displayName: 'Copy code to backend server'
 
     - script: |
-        echo "Installing Python dependencies (incl. dotenv)..."
+        echo "Setting up Python virtual environment and installing dependencies..."
         ssh -i $(SSH_KEY_PATH) -o StrictHostKeyChecking=no azureuser@$(BACKEND_HOST) << EOF
+          sudo apt-get update
+          sudo apt-get install -y libmysqlclient-dev python3-dev build-essential python3-venv
           cd $(APP_PATH)
+          if [ ! -d "venv" ]; then
+            python3 -m venv venv
+          fi
           source venv/bin/activate
+          pip install --upgrade pip
           pip install -r requirements.txt
           pip install python-dotenv mysqlclient
         EOF
-      displayName: 'Install Python dependencies'
+      displayName: 'Set up venv & install Python dependencies'
 
     - script: |
         echo "Running makemigrations..."
